the actual changes for 2b09f90cc0aa1e4dd3efdf64851d85592296ab69

--- a/changes.txt
+++ b/changes.txt
@@ -113,6 +113,9 @@
   name.  Problem reported by Bhumika Goyal.
 - Identify typedefs in type metavariable constraints, problem identified by
   Michele Martone.
+- #ifdefs and cpp directives should not be able to be bound to MetaField
+  metavariables.  Problem found using an example contributed by Michele
+  Martone.
 * 1.0.6
 ** Language:
 - Allow \ in #define in semantic patch rules, to allow body with multiple
