include should be #include

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -35,7 +35,7 @@ An HTML version of this documentation is available online at
   \CASE{\any{\NT{include\_cocci}} \some{\NT{changeset}}}
 
   \RULE{\rt{include\_cocci}}
-  \CASE{include \NT{string}}
+  \CASE{\#include \NT{string}}
   \CASE{using \NT{string}}
   \CASE{using \NT{pathToIsoFile}}
   \CASE{virtual \T{id} \ANY{, \T{id}}}
