--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1514,6 +1514,16 @@ An attribute begins with {\tt \_\_} or is declared as an {\tt attribute
   name} in the semantic patch.  In practice, only one attribute is
 currently allowed after the variable name in a variable declaration.
 
+Coccinelle supports declaring multiple variables or structure fields in the
+C code, but not in the SmPL code.  It is possible to remove a variable from
+within a declaration of multiple variables with a pattern that removes a
+complete single-variable declaration, e.g., {\tt - int x;}.  The type and
+the semicolon are only removed if all of the variables are removed.  On the
+other hand, it is not possible to write a single rule that removes a
+variable from within a declaration of multiple variables and replaces the
+declaration by something else.  There is no crash, simply a match failure.
+A message is given for this with the {\tt -{}-debug option}.
+
 \section{Statements}
 
 The first rule {\em statement} describes the various forms of a statement.
