fix omitted \ resulting in latex crash

--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -259,7 +259,7 @@ path name, beginning with /, it is used as is.
   single line number n, a range of line numbers n-m, or a negated line
   number -n  or range of line numbers -n-m.  A function is transformed if
   it overlaps with a specified range and it does not overlap with a negated
-  range.  An example is in demos/fg.cocci and demos/file_groups.}
+  range.  An example is in demos/fg.cocci and demos/file\_groups.}
 
 \developer{-{}-kbuild-info $\langle$file$\rangle$}{ The specified file
   contains information about which sets of files should be considered in
