more for float/double complex
Add these types to the SmPL language.
Add a test case.
Include token for complex in the parsing of C code.

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1285,6 +1285,8 @@ explained in this section.
   \CASE{double}
   \CASE{long double}
   \CASE{float}
+  \CASE{double complex}
+  \CASE{float complex}
   \CASE{size\_t} \CASE{ssize\_t} \CASE{ptrdiff\_t}
   \CASE{enum \NT{id} \{ \NT{PARAMSEQ}\mth{(}\NT{dot\_expr}, \NT{exp\_whencode}\mth{)} \OPT{,} \}}
   \CASE{\OPT{struct\OR union} \T{id} \OPT{\{ \any{\NT{struct\_decl\_list}} \}}}
