long double complex in doc

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1285,6 +1285,7 @@ explained in this section.
   \CASE{double}
   \CASE{long double}
   \CASE{float}
+  \CASE{long double complex}
   \CASE{double complex}
   \CASE{float complex}
   \CASE{size\_t} \CASE{ssize\_t} \CASE{ptrdiff\_t}
