--- a/changes.txt
+++ b/changes.txt
@@ -27,6 +27,7 @@
 * 1.0.8
 ** Language:
 - Support for double complex and float complex at the C and SmPL level.
+- Add conjunction for identifiers.
 ** Features:
 ** Bugfix:
 * 1.0.7
