drop stray remaining type on multidecl replacement

--- a/changes.txt
+++ b/changes.txt
@@ -31,6 +31,9 @@
 - Add conjunction for identifiers.
 - Simplify pragma matching.
 ** Features:
+- Some changes to the kinds of transformation allowed on declarations or
+  fields with multiple variables.  See the last paragrph of the
+  declarations section in the manual.
 ** Bugfix:
 - check identifier constraints when an identifier metavariable appears in a
   struct-typed metavariable.
