--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.7-00054-g0576dfc8-dirty~18.10npalix1) cosmic; urgency=medium
+
+  * New release 1.0.7-00054-g0576dfc8-dirty
+
+ -- Nicolas Palix (LIG) <nicolas.palix@imag.fr>  Wed, 12 Dec 2018 15:38:00 +0100
+
 coccinelle (1.0.7-00048-g4a333e56-dirty~18.10npalix2) cosmic; urgency=medium
 
   * New release 1.0.7-00048-g4a333e56-dirty
