--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.7b~18.10npalix2) cosmic; urgency=medium
+
+  * New release 1.0.7b
+
+ -- Nicolas Palix (LIG) <nicolas.palix@imag.fr>  Wed, 12 Dec 2018 16:53:55 +0100
+
 coccinelle (1.0.7b~18.10npalix1) cosmic; urgency=medium
 
   * New release 1.0.7
