--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.7.1~18.04npalix1) bionic; urgency=medium
+
+  * New release 1.0.7.1
+
+ -- Nicolas Palix (LIG) <nicolas.palix@imag.fr>  Fri, 14 Dec 2018 14:05:10 +0100
+
 coccinelle (1.0.7-00041-g65f04860~18.04npalix1) bionic; urgency=medium
 
   * New release 1.0.7-00041-g65f04860
