lowercase Continuation, as suggested by Markus Elfring

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1638,7 +1638,7 @@ file and it does not extend from one function over a function call into the
 called function.
 
 {\tt \#pragma} C code can only be matched against when the entire pragma is
-on one line in the C code.  The use of Continuation lines, via a backslash,
+on one line in the C code.  The use of continuation lines, via a backslash,
 will cause the matching to fail.
 
 \section{Expressions}
