--- a/docs/manual/spatch_options.tex
+++ b/docs/manual/spatch_options.tex
@@ -301,7 +301,7 @@ keeping track of tests that have succeeded and failed.}
   Coccinelle to file{\tt{.c}} to the file file{\tt{.res}} representing the
   expected result.}
 
-\developer{-{}-expected-extension}{Set the extension to be use on the file
+\developer{-{}-expected-extension}{Set the extension to be used on the file
   containing the expected result when testing with {\tt
     -{}-compare-with-expected}.  The leading dot is optional. This
   implicitly sets the {\tt -{}-compare-with-expected} flag.}
