--- a/changes.txt
+++ b/changes.txt
@@ -37,7 +37,7 @@
   declarations section in the manual.
 - Minimal support for multi-line pragmas.  C parsing is supported, but
   matching is not.
-- Allow changing the extension of the file name checked by
+- Allow changing the extension of the name of the file checked by
   --compare-with-expected, using the --expected-extension flag.
 ** Bugfix:
 - check identifier constraints when an identifier metavariable appears in a
