Add two layers of array declarations in typedef
As noted previously, this is not a general solution.

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1464,6 +1464,7 @@ the return type is obligatory.
   \CASE{\opt{\NT{storage}} \NT{fn\_ctype} ( * \NT{d\_ident} ) ( \NT{PARAMSEQ}\mth{(}\NT{name\_opt\_decl}, \mth{\varepsilon)} ) = \NT{initialize} ;}
   \CASE{typedef \NT{ctype} \NT{COMMA\_LIST}\mth{(}\NT{typedef\_ident}\mth{)} ;}
   \CASE{typedef \NT{ctype} \NT{typedef\_ident} [\NT{expr}];}
+  \CASE{typedef \NT{ctype} \NT{typedef\_ident} [\NT{expr}] [\NT{expr}];}
   \CASE{\NT{OR}\mth{(}\NT{decl\_var}\mth{)}}
   \CASE{\NT{AND}\mth{(}\NT{decl\_var}\mth{)}}
 %  \CASE{\NT{type} \opt{\NT{id} \opt{[\opt{\NT{dot\_expr}}]}
