--- a/changes.txt
+++ b/changes.txt
@@ -31,6 +31,8 @@
 - Add conjunction for identifiers.
 - Simplify pragma matching.
 - Support llu in C code and SmPL code.  Suggested by Timur Tabi.
+- Add support for macros with an initialiser as the body.  Requested by
+  Thomas Pedersen.
 ** Features:
 - Some changes to the kinds of transformation allowed on declarations or
   fields with multiple variables.  See the last paragrph of the
