--- a/changes.txt
+++ b/changes.txt
@@ -45,6 +45,8 @@
 - check identifier constraints when an identifier metavariable appears in a
   struct-typed metavariable.
 - type for eg &a->b should be const when a is const
+- Allow modifications within a function pointer typedef - reported by
+  Jerome Glisse
 * 1.0.7
 ** Language:
 - Allow constraints on any metavariables. Constraints can be specified
