typo reported by Markus Elfring

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1824,7 +1824,7 @@ of every token.
 It is possible to iterate Coccinelle, giving the subsequent iterations a
 different set of virtual rules or virtual identifier bindings.  Coccinelle
 currently supports iteration with both OCaml and Python scripting. An
-example with OCaml is fond in {\tt demos/iteration.cocci}, a Python
+example with OCaml is found in {\tt demos/iteration.cocci}, a Python
 example is found in {\tt demos/python\_iteration.cocci}.
 
 The OCaml scripting iteration example starts as follows.
