--- a/docs/pycocci.1
+++ b/docs/pycocci.1
@@ -99,7 +99,7 @@ their own, and provide an index reference number identifying each
 thread. Coccinelle would divide the amount of work required to be
 done and based on the index grant the thread a specific set of work.
 Some shell scripts could be used to help split the work out for you.
-\fBpycocci\fP was originally written to supercede these scripts and
+\fBpycocci\fP was originally written to supersede these scripts and
 use Python's multithreaded support, while also enabling some sensible
 arguments by default.
 
