--- a/changes.txt
+++ b/changes.txt
@@ -55,7 +55,7 @@
   curly-brackets can be omitted for a single item), regular expression
   (=~ "..." or !~ "..."), integer comparison (<=, <, >=, >) or scripts
   (:script:...). Constraints can be used in conjunctions (&&),
-  disjunctions (||) and can be negated (!)  and parenthesed.
+  disjunctions (||) and can be negated (!)  and parenthesized.
   Sub-expression constraints (<=) are still dealt separately and can
   only be used individually or in conjunction with other constraints
   (not under a disjunction or a negation). See tests/constraints.cocci
@@ -107,7 +107,7 @@
   considered.
 - Generalization of script constraints to allow reference to metavariables
   defined in the same rule, only when the constrained metavariable always
-  occurs in rule_elems that also mention any othe local metavariables
+  occurs in rule_elems that also mention any other local metavariables
   mentioned in the script constraint.  Referenced local variables must be
   declared before the constrained one.
 - Allow more variety in #pragmas
@@ -281,7 +281,7 @@ Rodriguez.
 - Safer handing of loops in ...
 * 1.0.0
 ** Language:
-- Add metavariables for matcing assignment and binary operators.
+- Add metavariables for matching assignment and binary operators.
 - Add ...... to match ... in C function declarations and definitions.
 - Addition of initializer list metavariables.  Thanks to Michael Stefaniuc
   for noticing the need for them.
@@ -596,7 +596,7 @@ Rodriguez.
 - Save virtual identifiers from the command line for use in finalize code.
 - Make ocaml file prefix name be just a constant string rather than being
   determined by the semantic patch file name, to avoid
-  incompatabilities between the semantic patch file name and what is
+  incompatibilities between the semantic patch file name and what is
   allowed for the names of ocaml modules.  Thanks to Markus Elfring for
   noticing the problem.
 - Improved use of parsing_hacks when an item of interest is preceded by
@@ -1288,7 +1288,7 @@ Rodriguez.
 ** first public release of the source code:
 
 ** Language:
- - embeded python scripting
+ - embedded python scripting
  - position
 
 ** Features
