Improved description for SmPL script example according to the of_xxx API
* Adjust a wording in this description.
* Use capitalisation for an editor name.

Signed-off-by: Markus Elfring <elfring@users.sourceforge.net>

--- a/docs/manual/examples.tex
+++ b/docs/manual/examples.tex
@@ -331,9 +331,9 @@ counter which must be decremented to release the resource. Then, when
 there is no call to \texttt{of\_node\_put}, no new assignment to the
 \texttt{device\_node} variable \texttt{n} and a \texttt{return}
 statement is reached, a bug is detected and the position \texttt{p1}
-and \texttt{p2} are initialized. As the Python only depends on the
+and \texttt{p2} are initialized. As the Python script rule depends only on the
 positions \texttt{p1} and \texttt{p2}, it is evaluated. In the
-following case, some emacs Org mode data are produced.  This example
+following case, some Emacs Org mode data are produced.  This example
 illustrates the various fields that can be accessed in the Python code from
 a position variable.
 
