Enable the display of a backslash in one text line
A backslash should be displayed at a specific text position.
Thus add a key word for this purpose.

See also:
https://tex.stackexchange.com/questions/9363/how-does-one-insert-a-backslash-or-a-tilde-into-latex#answer-9365

Signed-off-by: Markus Elfring <elfring@users.sourceforge.net>

--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -1924,7 +1924,7 @@ the following directories, later lines extend and may override earlier ones:
 	\item The directory provided with the -{}-dir option is processed last, if used.
 \end{itemize}
 
-Newlines, even with \, are not tolerated in attribute values. An example
+Newlines, even with \textbackslash, are not tolerated in attribute values. An example
 follows:
 
 \begin{quote}
