--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+coccinelle (1.0.8~19.04npalix1) disco; urgency=medium
+
+  * New release 1.0.8
+
+ -- Nicolas Palix <nicolas.palix@imag.fr>  Mon, 30 Sep 2019 16:11:01 +0200
+
 coccinelle (1.0.7.1~18.10npalix1) cosmic; urgency=medium
 
   * New release 1.0.7.1
