--- a/changes.txt
+++ b/changes.txt
@@ -24,6 +24,12 @@
 - typedefs from C code should not be used before their point of inference
   (saved_typedefs in cprogram_of_file)
 
+* 1.0.9
+** Language:
+- More kinds of string and char constants, mostly from C11. Not typed
+  correctly. Requested by Michael Stefaniuc.
+** Features:
+** Bugfix:
 * 1.0.8
 ** Language:
 - Support for long double complex, double complex and float complex at the
