--- a/docs/manual/cocci_syntax.tex
+++ b/docs/manual/cocci_syntax.tex
@@ -561,7 +561,7 @@ declaration.
 Metavariables for scripts can only be inherited from transformation rules.
 In the spirit of scripting languages such as Python that use dynamic
 typing, metavariables for scripts do not include type declarations.
-A script is only run if all metavariables are bound, either by interitance
+A script is only run if all metavariables are bound, either by inheritance
 or by a default value given with {\tt =}.
 
 \begin{grammar}
